--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "devOpen": "vite --host 0.0.0.0",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -15,11 +16,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "3.5.15"
+    "opensheetmusicdisplay": "1.9.0",
+    "vue": "3.5.15",
+    "webmidi": "3.1.12"
   },
   "devDependencies": {
-    "@tsconfig/node22": "22.0.2",
-    "@types/node": "22.15.23",
     "@vitejs/plugin-vue": "5.2.4",
     "@vue/eslint-config-prettier": "10.2.0",
     "@vue/eslint-config-typescript": "14.5.0",
@@ -27,12 +28,13 @@
     "eslint": "9.27.0",
     "eslint-plugin-oxlint": "0.16.12",
     "eslint-plugin-vue": "~10.1.0",
-    "jiti": "2.4.2",
     "npm-run-all2": "8.0.4",
     "oxlint": "0.16.12",
     "prettier": "3.5.3",
-    "typescript": "~5.8.0",
+    "sass-embedded": "1.89.0",
+    "typescript": "5.8.3",
     "vite": "6.3.5",
+    "vite-plugin-mkcert": "1.17.8",
     "vite-plugin-vue-devtools": "7.7.6",
     "vue-tsc": "2.2.10"
   },
